--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/cli": "^4.4.1",
     "cordova": "^9.0.0",
     "core-js": "^3.6.5",
+    "firebase": "^7.15.3",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
     "vue-router": "^3.2.0",
