--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cordova": "^9.0.0",
     "core-js": "^3.6.5",
     "firebase": "^7.15.3",
+    "node": "^14.7.0",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
     "vue-router": "^3.2.0",
