--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "firebase": "^7.15.3",
     "node": "^14.7.0",
     "pretty-bytes": "^5.3.0",
+    "ros-sdk-js": "git+https://github.com/team-ros/ros-sdk-js.git",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.0",
     "vue-directive-long-press": "^1.1.0",
     "vue-filter-pretty-bytes": "^0.1.6",
     "vue-router": "^3.2.0",
+    "vue-session": "^1.0.0",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
