--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ros_spielerei",
+  "name": "ros_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,40 +24,40 @@
     "cordova-serve-osx": "cross-env CORDOVA_PLATFORM=osx vue-cli-service cordova-serve-osx"
   },
   "dependencies": {
-    "@mdi/js": "^5.3.45",
+    "@mdi/js": "^5.5.55",
     "@mdi/react": "^1.4.0",
-    "@vue/cli": "^4.4.1",
+    "@vue/cli": "^4.5.4",
     "cordova": "^9.0.0",
     "core-js": "^3.6.5",
-    "firebase": "^7.15.3",
-    "node": "^14.7.0",
-    "pretty-bytes": "^5.3.0",
+    "firebase": "^7.19.1",
+    "node": "^14.8.0",
+    "pretty-bytes": "^5.4.1",
     "ros-sdk-js": "git+https://github.com/team-ros/ros-sdk-js.git",
-    "vue": "^2.6.11",
-    "vue-cookies": "^1.7.0",
+    "vue": "^2.6.12",
+    "vue-cookies": "^1.7.4",
     "vue-directive-long-press": "^1.1.0",
     "vue-filter-pretty-bytes": "^0.1.6",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.4.3",
     "vue-session": "^1.0.0",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.3.10"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@mdi/font": "^5.3.45",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-router": "^4.4.1",
-    "@vue/cli-service": "^4.4.1",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@mdi/font": "^5.5.55",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.5.4",
+    "@vue/cli-service": "^4.5.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
-    "sass": "^1.19.0",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-cordova": "~2.4.1",
-    "vue-cli-plugin-vuetify": "~2.0.5",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
   },
   "eslintConfig": {
     "root": true,
