--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
+    "node-sass": "^4.14.1",
     "sass": "^1.26.10",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^8.0.2",
     "vue-cli-plugin-cordova": "~2.4.1",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.12",
