--- a/package.json
+++ b/package.json
@@ -24,36 +24,37 @@
     "cordova-serve-osx": "cross-env CORDOVA_PLATFORM=osx vue-cli-service cordova-serve-osx"
   },
   "dependencies": {
-    "@mdi/js": "^5.5.55",
+    "@mdi/js": "^5.8.55",
     "@mdi/react": "^1.4.0",
-    "@vue/cli": "^4.5.4",
+    "@vue/cli": "^4.5.9",
     "cordova": "^9.0.0",
-    "core-js": "^3.6.5",
-    "firebase": "^7.19.1",
-    "node": "^14.8.0",
+    "core-js": "^3.7.0",
+    "firebase": "^7.24.0",
+    "lodash.debounce": "^4.0.8",
+    "node": "^14.15.1",
     "pretty-bytes": "^5.4.1",
-    "ros-sdk-js": "^2.1.0",
+    "ros-sdk-js": "^3.0.0",
     "vue": "^2.6.12",
     "vue-cookies": "^1.7.4",
     "vue-directive-long-press": "^1.1.0",
     "vue-filter-pretty-bytes": "^0.1.6",
-    "vue-router": "^3.4.3",
+    "vue-router": "^3.4.9",
     "vue-session": "^1.0.0",
-    "vuetify": "^2.3.10"
+    "vuetify": "^2.3.18"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "@mdi/font": "^5.5.55",
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-router": "^4.5.4",
-    "@vue/cli-service": "^4.5.4",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@mdi/font": "^5.8.55",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-plugin-router": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.14.1",
-    "sass": "^1.26.10",
+    "sass": "^1.29.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-cordova": "~2.4.1",
     "vue-cli-plugin-vuetify": "^2.0.7",
