--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,18 @@
 name: Publish Docker image
 on: [push]
 jobs:
+
+  test:
+    name: Test nodejs app
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2 
+        with:
+          node-version: '12'
+      - run: npm install
+      - run: npm run build
+
   build:
     name: Build VueJS app
     runs-on: ubuntu-20.04
